--- a/ui.html
+++ b/ui.html
@@ -23,15 +23,16 @@
 
 
     <div class='state'> 
-      <strong> Текущее состояние: </strong> 
-      <span class='state__name'> ?? </span>
-      
-      <div class='state__tape'>
-          <div class='state__tape__cell'>1</div>
-        <div class='state__tape__cell state__tape__cell--active'>0</div>
-        <div class='state__tape__cell'>0</div>
+      <div class='state__identifier'>
+        <strong> Текущее состояние: </strong> 
+        <span class='state__name'> ?? </span>
       </div>
-      <div class='state__head'></div>
+      
+      <div class='state__tape-wrap'>
+        <div class='state__tape'>
+          <div class='state__head'></div>
+        </div>
+      </div>
     </div>
 
 
