--- a/ui.html
+++ b/ui.html
@@ -25,7 +25,7 @@
     <div class='state'> 
       <div class='state__identifier'>
         <strong> Текущее состояние: </strong> 
-        <span class='state__name'> ?? </span>
+        q<span class='state__name'> ?? </span>
       </div>
       
       <div class='state__tape-wrap'>
